Integracion con google maps

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4jhQXWJ1FobS9D4cLUveBrTeJjiMl7Uk">
+  </script>
 </body>
 </html>
